Admin panel: Videocalls and cancelled videocalls.

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -271,7 +271,7 @@ button.btn-primary:hover {
 	}	
 }
 
-.project-description {
+.adminpanel-description {
 	display: -webkit-box;
 	-webkit-line-clamp: 5;
 	-webkit-box-orient: vertical;
