--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -44,7 +44,7 @@ h1, h2, h3, h4, p, span, div {
 	color: rgb(45, 45, 45);
 }
 .description-light {
-	color: rgb(45, 45, 45);
+	color: rgb(80, 80, 80);
 }
 .section-bg-light {
 	background: #EEEEF3;
@@ -108,6 +108,14 @@ button.btn-primary {
 
 button.btn-primary:hover {
     box-shadow: 0px 0px 20px rgb(90 67 190 / .3);
+}
+
+.text-primary {
+	text-shadow: 0px 0px 15px rgb(134 107 254 / .3);
+}
+
+.text-primary-2 {
+	text-shadow: 0px 0px 15px rgb(90 67 190 / .3);
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -271,9 +279,16 @@ button.btn-primary:hover {
 	}	
 }
 
-.adminpanel-description {
+.text-ellipsis-5 {
 	display: -webkit-box;
 	-webkit-line-clamp: 5;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
+.text-ellipsis-4 {
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
 	-webkit-box-orient: vertical;
 	overflow: hidden;
 }
