first branch commit

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -7,6 +7,7 @@
 
 html {
     scroll-behavior: smooth;
+		@apply bg-zinc-900 scrollbar-thin scrollbar-thumb-primary scrollbar-track-zinc-900 h-32;
 }
 
 body {
@@ -16,6 +17,17 @@ body {
 h1, h2, h3, h4, p, span, div {
 	transition: color 50ms;
 } 
+
+/* to remove/add scroll during modal toggling  */
+.body-in-modal-open {
+		overflow-y: hidden !important;
+	}
+@media(min-width: 768px) {
+	.body-in-modal-open {
+		overflow-y: hidden !important;
+		padding-right: 8px;
+	}
+}
 
 /* DARKMODE */
 .text-dark {
@@ -58,22 +70,6 @@ img {
 	user-drag: none;
 }
 
-/* Scrollbar width */
-::-webkit-scrollbar {
-	width: 6px;
-	height: 6px;
-}
-  
-/* Scrollbar Track */
-::-webkit-scrollbar-track {
-	background: transparent;
-}
-  
-/* Scrollbar Handle */
-::-webkit-scrollbar-thumb {
-	background: #866bfe;
-}
-
 /* Text selection */
 ::-moz-selection { /* Code for Firefox */
 	color: white;
@@ -85,7 +81,7 @@ img {
 	background: #866bfe;
 }
 
-/* Remove autofull background on inputs */
+/* Remove autofill background on inputs */
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
