--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -440,3 +440,60 @@ button.btn-primary:hover {
 .blog-bg-light {
 	background-image: url('/blog-bg-light.svg');
 }
+
+.strapi-markdown a {
+	color: #866bfe;
+	transition: color .15s ease-in-out;
+}
+
+.strapi-markdown a:hover {
+	color: #5a43be;
+}
+
+.strapi-markdown h1 {
+	font-size: 3rem;
+}
+
+.strapi-markdown h2 {
+	font-size: 2.6rem;
+}
+
+.strapi-markdown h3 {
+	font-size: 2.2rem;
+}
+
+.strapi-markdown h4 {
+	font-size: 1.8rem;
+}
+
+.strapi-markdown h5 {
+	font-size: 1.4rem;
+}
+
+.strapi-markdown h6 {
+	font-size: 1rem;
+}
+
+.strapi-markdown ul {
+	list-style-type: disc;
+	list-style-position: inside;
+}
+
+.strapi-markdown ol {
+	list-style-type: decimal;
+	list-style-position: inside;
+}
+
+.strapi-markdown ul ul,
+ol ul {
+	list-style-type: circle;
+	list-style-position: inside;
+	margin-left: 15px;
+}
+
+.strapi-markdown ol ol,
+ul ol {
+	list-style-type: lower-latin;
+	list-style-position: inside;
+	margin-left: 15px;
+}
