--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -450,6 +450,12 @@ button.btn-primary:hover {
 	color: #5a43be;
 }
 
+.strapi-markdown img {
+	width: 100%;
+	border-radius: 0.375rem;
+	margin: 1rem 0;
+}
+
 .strapi-markdown h1 {
 	font-size: 3rem;
 }
