--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -30,6 +30,17 @@ input[type="number"]::-webkit-outer-spin-button {
 	margin: 0;
 }
 
+.link {
+	color: #866bfe;
+	transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.link:hover {
+	color: #5a43be;
+}
+
 .image-container {
 	width: 100%;
 	position: relative !important;
