--- a/client/src/components/SecondaryContact/Index.module.css
+++ b/client/src/components/SecondaryContact/Index.module.css
@@ -13,10 +13,12 @@
     align-items: center;
     justify-content: center;
     padding: 1.3rem;
-    height: 10rem;
+    height: 100%;
+    min-height: 10rem;
     border: .15rem solid transparent;
     border-radius: .5rem;
     transition: all .2s;
+    word-break: break-all;
 }
 
 .serviceCard:hover {
