--- a/client/src/components/SecondaryContact/Index.module.css
+++ b/client/src/components/SecondaryContact/Index.module.css
@@ -6,6 +6,8 @@
 }
 
 .serviceCard {
+    user-select: none;
+    position: relative;
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -13,10 +15,18 @@
     align-items: center;
     justify-content: center;
     padding: 1.3rem;
-    height: 10rem;
-    border: .15rem solid transparent;
+    height: 100%;
+    min-height: 10rem;
+    /* border: .15rem solid transparent; */
     border-radius: .5rem;
     transition: all .2s;
+    word-break: break-all;
+}
+
+@media (max-width: 768px) {
+    .serviceCard {
+        padding: .7rem;
+    }
 }
 
 .serviceCard:hover {
