--- a/client/src/components/HomeSections/Contact/Index.module.css
+++ b/client/src/components/HomeSections/Contact/Index.module.css
@@ -6,6 +6,8 @@
 }
 
 .serviceCard {
+    user-select: none;
+    position: relative;
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -15,20 +17,19 @@
     padding: 1.3rem;
     height: 100%;
     min-height: 10rem;
-    border-color: #866bfe75;
     /* border: .15rem solid transparent; */
-    /* border-radius: .5rem; */
+    border-radius: .5rem;
     transition: all .2s;
     word-break: break-all;
 }
 
 .serviceCard:hover {
-    /* border-color: #866bfe; */
+    border-color: #866bfe;
     background: rgba(134, 107, 254, .1);
 }
 
 .cardSelected {
-    /* border-color: #866bfe; */
+    border-color: #866bfe;
     background: rgba(134, 107, 254, .1);
 }
 
