--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -24,6 +24,23 @@ div {
 	transition: color 50ms;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+.link {
+	color: #866bfe;
+	transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.link:hover {
+	color: #5a43be;
+}
+
 .image-container {
 	width: 100%;
 	position: relative !important;
@@ -502,4 +519,79 @@ ul ol {
 	list-style-type: lower-latin;
 	list-style-position: inside;
 	margin-left: 15px;
+}
+
+.contact-popup-show {
+	animation: contactPopupShow;
+	animation-duration: .2s;
+	animation-timing-function: ease-in-out;
+}
+
+@keyframes contactPopupShow {
+	from {
+		opacity: 0;
+		transform: translateX(10vw);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+.contact-popup-hide {
+	animation: contactPopupHide;
+	animation-duration: .2s;
+	animation-timing-function: ease-in-out;
+}
+
+@keyframes contactPopupHide {
+	from {
+		opacity: 1;
+		transform: translateX(0);
+	}
+
+	to {
+		opacity: 0;
+		transform: translateX(10vw);
+	}
+}
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0, 0, 0, .75);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.modal {
+	max-height: 90vh;
+	overflow-y: scroll;
+
+	/* width: clamp(50%, 700px, 90%);
+	height: min(50%, 300px); */
+	margin: 2rem;
+	padding: 1.5rem 2rem;
+	border-radius: 6px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	-ms-overflow-style: none;
+		scrollbar-width: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.modal::-webkit-scrollbar {
+	display: none;
+}
+
+@media (max-width: 768px) {
+	.modal {
+		margin: 1rem;
+		padding: 1rem;
+	}
 }
