--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -603,3 +603,15 @@ ul ol {
 		padding: 1rem;
 	}
 }
+
+.violet {
+	color: #866bfe;
+}
+
+.blue {
+	color: #2176D6;
+}
+
+.orange {
+	color: #D6A221
+}
