design updates on videocall and contact modals

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -577,13 +577,12 @@ ul ol {
 }
 
 .modal {
-	max-height: 90vh;
+	/* max-height: 90vh; */
 	overflow-y: scroll;
-
 	/* width: clamp(50%, 700px, 90%);
 	height: min(50%, 300px); */
-	margin: 2rem;
-	padding: 1.5rem 2rem;
+	/* margin: 2rem; */
+	/* padding: 1.5rem 2rem; */
 	border-radius: 6px;
 	display: flex;
 	flex-direction: column;
@@ -597,12 +596,12 @@ ul ol {
 	display: none;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
 	.modal {
 		margin: 1rem;
 		padding: 1rem;
 	}
-}
+} */
 
 .violet {
 	color: #866bfe;
