--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -614,3 +614,26 @@ ul ol {
 .orange {
 	color: #D6A221
 }
+
+.hero-background {
+	position: relative;
+	height: calc(100vh - 5rem);
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgba(0, 0, 0, .5);
+}
+
+.hero-background::before {
+	content: "";
+	background-image: url('/home/hero/background.webp');
+	background-position: center;
+	background-size: cover;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	opacity: .5;
+}
