Logo, redirects and styles

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -622,7 +622,7 @@ ul ol {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: rgba(0, 0, 0, .5);
+	background-color: rgba(0, 0, 0);
 }
 
 .hero-background::before {
