--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -617,17 +617,13 @@ ul ol {
 
 .hero-background {
 	position: relative;
-	height: calc(100vh - 5rem);
 	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: rgba(0, 0, 0);
+	background-color: rgb(0, 0, 0);
 }
 
 .hero-background::before {
 	content: "";
-	background-image: url('/home/hero/background.webp');
+	background-image: url('/home/hero/mobile.webp');
 	background-position: center;
 	background-size: cover;
 	position: absolute;
