Update/home page changes (#125)
* new design on videocall modal

* design updates on videocall and contact modals (#110)

* Design/videocall & contact modal (#111)

* design updates on videocall and contact modals

* Update Index.jsx

* Update README.md

* Design/videocall & contact modal (#112)

* design updates on videocall and contact modals

* Update Index.jsx

* Update Index.jsx

* Design/videocall & contact modal (#113)

* design updates on videocall and contact modals

* Update Index.jsx

* Update Index.jsx

* Update videocall modal

* Design/videocall & contact modal (#114)

* design updates on videocall and contact modals

* Update Index.jsx

* Update Index.jsx

* Update videocall modal

* Update videocall design

* hero section first design (mobile)

* Design/home page hero (#117)

* hero section first design (mobile)

* Logo, redirects and styles

* home page hero final design (#118)

* hero section first design (mobile)

* Logo, redirects and styles

* hero final design

* new design on process section (#119)

* new design on process section

- New design on process section.
- Removed step 3, 4, 5 and 6.
- Added "Development" to step 3.

* Update globals.css

* update technologies image (#120)

- Update "tailwind" image on darkmode

* update texts on hero section (#121)

* update hero section design (#123)

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -577,13 +577,12 @@ ul ol {
 }
 
 .modal {
-	max-height: 90vh;
+	/* max-height: 90vh; */
 	overflow-y: scroll;
-
 	/* width: clamp(50%, 700px, 90%);
 	height: min(50%, 300px); */
-	margin: 2rem;
-	padding: 1.5rem 2rem;
+	/* margin: 2rem; */
+	/* padding: 1.5rem 2rem; */
 	border-radius: 6px;
 	display: flex;
 	flex-direction: column;
@@ -597,9 +596,56 @@ ul ol {
 	display: none;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
 	.modal {
 		margin: 1rem;
 		padding: 1rem;
 	}
+} */
+
+.violet {
+	color: #866bfe;
+}
+
+.blue {
+	color: #2176D6;
+}
+
+.orange {
+	color: #D6A221
+}
+
+.process-swiper {
+	padding: 0rem 0rem 4rem 0rem !important;
+}
+
+.swiper-pagination-bullet-active {
+	background: #866bfe !important;
+}
+
+.bullet-lightmode .swiper-pagination-bullet{
+	background: #000;
+}
+
+.bullet-darkmode .swiper-pagination-bullet {
+	background: #fff;
+}
+
+.hero-background {
+	position: relative;
+	width: 100%;
+	background-color: rgb(0, 0, 0);
+}
+
+.hero-background::before {
+	content: "";
+	background-image: url('/home/hero/mobile.webp');
+	background-position: center;
+	background-size: cover;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	opacity: .35;
 }
