Update/Client comments section design

--- a/client/src/components/HomeSections/Pricing/Index.module.css
+++ b/client/src/components/HomeSections/Pricing/Index.module.css
@@ -13,3 +13,22 @@
 .button:hover {
     background: #5a43be;
 }
+
+.prices-swiper {
+    display: block;
+}
+
+.swiper-slide-item {
+    width: 22rem !important;
+    height: unset !important;
+}
+
+.swiper-slide-item:nth-child(3) {
+    margin-right: 0 !important;
+}
+
+@media (min-width: 1280px) {
+    .prices-swiper {
+        display: none !important;
+    }
+}
