--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -681,21 +681,6 @@ ul ol {
 	z-index: 1;
 }
 
-.prices-swiper {
-	display: block;
-}
-
-.swiper-slide {
-	width: 22rem !important;
-	height: unset !important;
-}
-
-.swiper-slide:nth-child(3) {
-	margin-right: 0 !important;
-}
-
-@media (min-width: 1280px) {
-	.prices-swiper {
-		display: none !important;
-	}
+.client-comment .swiper-wrapper {
+	height: max-content;
 }
