Design/Light mode colors on pricing section

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -682,5 +682,6 @@ ul ol {
 }
 
 .client-comment .swiper-wrapper {
-	height: max-content;
+	display: grid;
+	grid-template-columns: repeat(7, 1fr);
 }
