--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -2,6 +2,8 @@
 /* font-family: 'Poppins', sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* font-family: 'Overpass', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+/* font-family: 'Bebas Neue', sans-serif; */
 
 @tailwind base;
 @tailwind components;
