--- a/client/src/components/home/Introduction/Index.module.css
+++ b/client/src/components/home/Introduction/Index.module.css
@@ -1,36 +1,23 @@
-.backgroundImage {
-    position: relative;
-    padding: 1.5rem;
-}
+/* .backgroundImage {
+    background-color: black;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg clip-path='url(%26quot%3b%23SvgjsClipPath1165%26quot%3b)' fill='none'%3e%3ccircle r='25.695' cx='825.34' cy='499.85' fill='url(%26quot%3b%23SvgjsLinearGradient1166%26quot%3b)'%3e%3c/circle%3e%3ccircle r='54.22' cx='161.29' cy='340.69' fill='%2343468b'%3e%3c/circle%3e%3ccircle r='38.74' cx='635.97' cy='335.22' fill='url(%26quot%3b%23SvgjsLinearGradient1167%26quot%3b)'%3e%3c/circle%3e%3ccircle r='44.13' cx='548.35' cy='100' fill='url(%26quot%3b%23SvgjsLinearGradient1168%26quot%3b)'%3e%3c/circle%3e%3ccircle r='54.415' cx='982.04' cy='37' fill='url(%26quot%3b%23SvgjsLinearGradient1169%26quot%3b)'%3e%3c/circle%3e%3ccircle r='46.755' cx='1197.06' cy='420.97' fill='%2343468b'%3e%3c/circle%3e%3ccircle r='23.755' cx='1328.18' cy='404.61' fill='url(%26quot%3b%23SvgjsLinearGradient1170%26quot%3b)'%3e%3c/circle%3e%3ccircle r='46.27' cx='1388.61' cy='38.84' fill='%2343468b'%3e%3c/circle%3e%3ccircle r='51.535' cx='891.9' cy='374.1' fill='url(%26quot%3b%23SvgjsLinearGradient1171%26quot%3b)'%3e%3c/circle%3e%3ccircle r='15.59' cx='406.63' cy='454.2' fill='url(%26quot%3b%23SvgjsLinearGradient1172%26quot%3b)'%3e%3c/circle%3e%3c/g%3e%3cdefs%3e%3cclipPath id='SvgjsClipPath1165'%3e%3crect width='1440' height='560' x='0' y='0'%3e%3c/rect%3e%3c/clipPath%3e%3clinearGradient x1='773.95' y1='499.85' x2='876.73' y2='499.85' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1166'%3e%3cstop stop-color='%23f29b7c' offset='0.1'%3e%3c/stop%3e%3cstop stop-color='%237e6286' offset='0.9'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='558.49' y1='335.22' x2='713.45' y2='335.22' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1167'%3e%3cstop stop-color='%2384b6e0' offset='0.1'%3e%3c/stop%3e%3cstop stop-color='%23464a8f' offset='0.9'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='460.09000000000003' y1='100' x2='636.61' y2='100' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1168'%3e%3cstop stop-color='%23ab3c51' offset='0.1'%3e%3c/stop%3e%3cstop stop-color='%234f4484' offset='0.9'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='873.2099999999999' y1='37' x2='1090.87' y2='37' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1169'%3e%3cstop stop-color='%23e298de' offset='0.1'%3e%3c/stop%3e%3cstop stop-color='%23484687' offset='0.9'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='1280.67' y1='404.61' x2='1375.69' y2='404.61' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1170'%3e%3cstop stop-color='%2332325d' offset='0.1'%3e%3c/stop%3e%3cstop stop-color='%23424488' offset='0.9'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='788.8299999999999' y1='374.1' x2='994.9699999999999' y2='374.1' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1171'%3e%3cstop stop-color='%23ab3c51' offset='0.1'%3e%3c/stop%3e%3cstop stop-color='%234f4484' offset='0.9'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='375.45' y1='454.2' x2='437.81' y2='454.2' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1172'%3e%3cstop stop-color='%23ab3c51' offset='0.1'%3e%3c/stop%3e%3cstop stop-color='%234f4484' offset='0.9'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+} */
 
-.backgroundImage::before {
+/* .backgroundImage::before {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
-    background-position: top;
+    width: 100%;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: 1;
-}
+    background-position: center;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1059%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(134%2c 107%2c 254%2c 1)'%3e%3c/rect%3e%3cpath d='M0%2c469.676C95.826%2c483.063%2c197.004%2c484.758%2c282.854%2c440.129C372.332%2c393.614%2c446.298%2c314.349%2c480.96%2c219.647C514.556%2c127.859%2c487.462%2c28.531%2c468.608%2c-67.376C450.652%2c-158.715%2c431.582%2c-250.937%2c374.061%2c-324.125C314.897%2c-399.404%2c236.111%2c-466.284%2c141.857%2c-483.121C50.659%2c-499.412%2c-36.324%2c-449.839%2c-121.146%2c-412.586C-196.318%2c-379.571%2c-263.895%2c-336.979%2c-322.294%2c-279.27C-384.788%2c-217.514%2c-449.385%2c-152.959%2c-470.243%2c-67.611C-492.06%2c21.662%2c-483.129%2c119.82%2c-439.61%2c200.763C-397.23%2c279.588%2c-312.592%2c320.91%2c-236.248%2c367.61C-161.556%2c413.3%2c-86.716%2c457.562%2c0%2c469.676' fill='%237759fe'%3e%3c/path%3e%3cpath d='M1440 1101.266C1537.5720000000001 1081.089 1603.15 996.856 1679.9859999999999 933.425 1747.2930000000001 877.86 1808.307 821.488 1862.13 752.78 1931.5720000000001 664.133 2032.589 586.076 2040.0990000000002 473.719 2047.8809999999999 357.29200000000003 1989.5230000000001 236.77999999999997 1901.757 159.885 1817.209 85.80900000000003 1694.967 82.44999999999999 1582.941 73.18599999999998 1488.883 65.40800000000002 1399.333 86.62700000000001 1308.1 110.791 1214.3319999999999 135.62599999999998 1114.743 150.673 1043.172 216.147 967.438 285.43 933.216 384.924 901.668 482.6 864.633 597.263 799.711 720.109 844.234 832.077 888.897 944.3969999999999 1016.3 998.119 1126.452 1047.8899999999999 1225.064 1092.4470000000001 1334.031 1123.179 1440 1101.266' fill='%23957dfe'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1059'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
+} */
 
-.glassmorphism {
-    position: relative;
-}
-
-.glassmorphism::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(137, 107, 254, 0.2);
+/* .glassmorphism {
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(116, 116, 116, 0.18);
-    border-radius: 1rem;
-    z-index: 1;
-}
+    border: 1px solid rgba(150, 150, 150, 0.2);
+} */
