Update/DigitalMarketing and Website pages

--- a/client/src/components/marketingdigital/Hero/Index.module.css
+++ b/client/src/components/marketingdigital/Hero/Index.module.css
@@ -21,5 +21,21 @@
 @media (max-width: 640px) {
     .backgroundImage {
         padding: 8rem 0;
-}
+    }
 } 
+
+.button {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .25rem;
+    background: #866bfe;
+    padding: .4rem .8rem;
+    transition: background .2s;
+    border-radius: .2rem;
+}
+
+.button:hover {
+    background: #5a43be;
+}
