--- a/client/src/components/marketingdigital/Introduction/Index.module.css
+++ b/client/src/components/marketingdigital/Introduction/Index.module.css
@@ -17,3 +17,19 @@
         top: -4px
     }
 }
+
+.button {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .25rem;
+    background: #866bfe;
+    padding: .4rem .8rem;
+    transition: background .2s;
+    border-radius: .2rem;
+}
+
+.button:hover {
+    background: #5a43be;
+}
