Design/Apps page (1/2)

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -358,6 +358,13 @@ button.btn-primary:hover {
 	overflow: hidden;
 }
 
+.text-ellipsis-3 {
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
 .rdp {
 	margin: 0 !important;
 }
