--- a/client/src/components/WhatsAppButton/Index.module.css
+++ b/client/src/components/WhatsAppButton/Index.module.css
@@ -12,4 +12,5 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 150ms;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, .1);
+    z-index: 5;
 }
