Update/Website page redesign

--- a/client/src/components/website/Pricing/Index.module.css
+++ b/client/src/components/website/Pricing/Index.module.css
@@ -32,3 +32,11 @@
         display: none !important;
     }
 }
+
+.cardShadowLeft {
+    box-shadow: -5px 0 20px rgba(0, 0, 0, .1);
+}
+
+.cardShadowRight {
+    box-shadow: 5px 0 20px rgba(0, 0, 0, .1);
+}
